# TRANSPORT-TICKETING-SYSTEM_samirRizk

./: CMakeLists.txt  README.md  TESTING_GUIDE.md  docker-compose.yml
data/: tickets.csv
docker/: Dockerfile.backoffice  Dockerfile.gate  Dockerfile.tvm  mosquitto.conf
include/common/: ticket.h
scripts/: build.sh  run_tests.sh  simulate_ticket_sale.sh  simulate_ticket_validation.sh
src/: CMakeLists.txt
src/backoffice/: main.cpp
src/common/: ticket.cpp
src/gate/: main.cpp
src/tvm/: main.cpp
tests/: CMakeLists.txt
tests/integration/: integration_test.sh
tests/unit/: test_ticket.cpp
